--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -19,6 +19,9 @@
                 <img class="logo" src="../img/Logo.svg" alt="logo">
                 <nav class="header__nav">
                    <label class="header__nav-label" for="gam">
+                    <div class="header__nav-icon"> 
+                        <img class="header__gam-img" src="../img/icon.png" alt="=">
+                    </div>
                     <div class="header__nav-icon"></div>
                    </label>
                    <input id="gam" class="header__nav-input" type="checkbox">
@@ -59,44 +62,44 @@
        <footer class="footer">
         <div class="container footer__container">
             <div class="footer__content">
-                <h2 class="title footer__title">
-                    Need a project?
-                </h2>
-                <a class="h6 footer__contact" href="tel:2395550108">
+                <h2 class=" title footer__title">Need a project?</h2>
+                <a class=" h6 footer__contact"href="tel:(239) 555-0108">
                     (239) 555-0108
                 </a>
-                <a class="h6 footer__contact" href="mailto:tanya.hill@example.com">
+                <a class="h6 footer__contact"href="mailto:tanya.hill@example.com">
                     tanya.hill@example.com
                 </a>
             </div>
 
             <ul class="footer__social-row">
                 <li class="footer__social-item">
-                    <a class="h6 hover-link-animation footer__link" href="#">
+                    <a class="h6 hover__link-animation footer__link" href="#">
                         Facebook
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a class="h6 hover-link-animation footer__link" href="#">
+                    <a class="h6 hover__link-animation footer__link" href="#">
                         Instagram
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a class="h6 hover-link-animation footer__link" href="#">
+                    <a class="h6 hover__link-animation footer__link" href="#">
                         Dribbble
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a class="h6 hover-link-animation footer__link" href="#">
+                    <a class="h6 hover__link-animation footer__link" href="#">
                         Linkedin
                     </a>
                 </li>
             </ul>
-           
+
             <p class="h9 footer__description">
-                © Copyright Sasha Theme. 2022
+                © Copyright Manifest Theme. Allrights reserved
             </p>
+
         </div>
+        
     </footer>
 
     </div>
