--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -60,7 +60,7 @@
                         <h3 class="h3 works__item-title">Car Sharing App</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-content-data">2020</p>  
-                        <a href="./casestudy.html">
+                        <a href="./fashion.html">
                         <button class="button button--icon">
                             View More
                         </button>
@@ -74,7 +74,7 @@
                         <h3 class="h3 works__item-title">AI Fashion Platform</h3>
                         <p class="h6 works__item-text">User Centered Website Redesign</p>  
                         <p class="h6 works__item-data">2019</p>  
-                        <a href="./casestudy.html">
+                        <a href="./fashion.html">
                             <button class="button button--icon">
                                 View More
                             </button>
@@ -88,7 +88,7 @@
                         <h3 class="h3 works__item-title">Redesigning DropBox</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-data">2018</p>  
-                        <a href="./casestudy.html">
+                        <a href="./fashion.html">
                             <button class="button button--icon">
                                 View More
                             </button>
