--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -8,6 +8,7 @@
     <title>Manifest</title>
     <!--Шлях до css це відносний шлях не залежить ввід папки-->
     <link rel="stylesheet" href="@@webRoot/bundle.min.css">
+    <link href="./404.html">
 </head>
 
 <body>
