--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -143,7 +143,7 @@
                     </div>
                     </div>
                     <div class="blog__button">
-                    <a href="./works.html">
+                    <a href="./blogsec.html">
                         <button class="button ">
                         Load More
                     </button>
