--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -67,7 +67,7 @@
                         <h3 class="h3 works__item-title">Car Sharing App</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-content-data">2020</p>  
-                        <a href="./fashion.html">
+                        <a href="./work/work1.html">
                         <button class="button button--icon">
                             View More
                         </button>
@@ -81,7 +81,7 @@
                         <h3 class="h3 works__item-title">AI Fashion Platform</h3>
                         <p class="h6 works__item-text">User Centered Website Redesign</p>  
                         <p class="h6 works__item-data">2019</p>  
-                        <a href="./fashion.html">
+                        <a href="./work/work2.html">
                             <button class="button button--icon">
                                 View More
                             </button>
@@ -95,7 +95,7 @@
                         <h3 class="h3 works__item-title">Redesigning DropBox</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-data">2018</p>  
-                        <a href="./fashion.html">
+                        <a href="./work/work3.html">
                             <button class="button button--icon">
                                 View More
                             </button>
