--- a/src/pages/work/work1.html
+++ b/src/pages/work/work1.html
@@ -81,7 +81,7 @@
         <section class="container fashion__section">
             <div class="fashion__content">
                 <h3 class="h3">User Research and Personas</h3>
-                <img class="fashion__img" src="../img/fashion/userrich.jpg">
+                <img class="fashion__img" src="../img/fashion/inital.jpg">
                 <div class="fashion__text">
                 <p class="text">
                     Who is your user? Indicate her KEY personality traits and help round out her overall image.
