--- a/src/index.html
+++ b/src/index.html
@@ -55,19 +55,19 @@
                 <div class="home__content">
                     <div class="home__works">
                     <div class="home__card">
-                        <img  src="../img/home/img 1.jpg">
+                        <img  src="../img/home/img1.jpg">
                     <p class="h6"></p>
                     </div>
                     <div class="home__card2">
-                        <img  src="../img/home/img 2.jpg">
+                        <img  src="../img/home/img2.jpg">
                         <p class="h6">Mixkit Inspo</p>
                     </div>
                     <div class="home__card2"> 
-                        <img  src="../img/home/img 3.jpg">
+                        <img  src="../img/home/img3.jpg">
                         <p class="h6">Abalone</p>
                     </div>
                     <div class="home__card">
-                        <img  src="../img/home/img 4.jpg">
+                        <img  src="../img/home/img4.jpg">
                         <p class="h6">Dreamy</p>
                     </div>    
                 </div>
@@ -198,7 +198,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright Manifest Theme. Allrights reserved
+                © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank">by NikBezkorovaynyi 2022</a>
             </p>
 
         </div>
