--- a/src/pages/blogsec.html
+++ b/src/pages/blogsec.html
@@ -381,7 +381,7 @@
                 </ul>
 
                 <p class="h9 footer__description">
-                    © Copyright Viktoria2123 Theme. 2022
+                    © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank"> by NikBezkorovaynyi 2022</a>
                 </p>
 
             </div>
