--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -67,7 +67,7 @@
                         <h3 class="h3 works__item-title">Car Sharing App</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-content-data">2020</p>  
-                        <a href="./work/work1.html">
+                        <a href="../pages/work/work1.html" target="_blank">
                         <button class="button button--icon">
                             View More
                         </button>
@@ -81,7 +81,7 @@
                         <h3 class="h3 works__item-title">AI Fashion Platform</h3>
                         <p class="h6 works__item-text">User Centered Website Redesign</p>  
                         <p class="h6 works__item-data">2019</p>  
-                        <a href="./work/work2.html">
+                        <a href="../pages/work/work2.html" target="_blank">
                             <button class="button button--icon">
                                 View More
                             </button>
@@ -95,7 +95,7 @@
                         <h3 class="h3 works__item-title">Redesigning DropBox</h3>
                         <p class="h6 works__item-text">Product Design</p>  
                         <p class="h6 works__item-data">2018</p>  
-                        <a href="./work/work3.html">
+                        <a href="../pages/work/work3.html" target="_blank">
                             <button class="button button--icon">
                                 View More
                             </button>
@@ -149,7 +149,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright Manifest Theme. Allrights reserved
+                © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank">by NikBezkorovaynyi 2022</a>
             </p>
 
         </div>
