--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -115,7 +115,7 @@
                 </ul>
 
                 <p class="h9 footer__description">
-                    © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank">by NikBezkorovaynyi 2022</a>
+                    © Copyright Manifest Theme. Allrights reserved
                 </p>
 
             </div>
