--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -142,7 +142,7 @@
                     </div>
                     </div>
                     <div class="post__button">
-                    <a href="./blogsec.html">
+                    <a href="./blogsec/blogsec.html">
                         <button class="button ">
                         Load More
                     </button>
