--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -19,7 +19,7 @@
                 <nav class="header__nav">
                     <label class="header__nav-label" for="gam">
                         <div class="header__nav-icon">
-                            <img class="header__gam-img" src="../../img/gam-icon.png" alt="=">
+                            <img class="header__gam-img" src="../../img/icon.png" alt="=">
                         </div>
 
                         <input id="gam" class="header__nav-input" type="checkbox">
@@ -34,7 +34,7 @@
                                 <a class="header__nav-link" href="../works.html">Works</a>
                             </li>
                             <li class="header__nav-item header__nav-item--active">
-                                <a class="header__nav-link" href="../blog.html">Blog</a>
+                                <a class="header__nav-link" href="../../pages/blog.html">Blog</a>
                             </li>
                             <li class="header__nav-item">
                                 <a class="header__nav-link" href="../contact.html">Contact</a>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
 
-                    <img class="blog__container-img" src="../../img/blog-01/blog-01-01.jpg" alt="">
+                    <img class="blog__container-img" src="../../img/blogsec/dom.jpg" alt="">
                 </div>
             </section>
             <!-- blog1 end-->
@@ -82,7 +82,7 @@
             <section class="description">
                 <div class="container description__container">
                     <div class="description__autor">
-                        <img class="description__autor-img" src="../../img/blog-01/blog-01-02.jpg" alt="">
+                        <img class="description__autor-img" src="../../img/blogsec/people.jpg" alt="">
                         <p class="h6 description__autor-title">
                             Monica Geller
                         </p>
@@ -205,7 +205,7 @@
                     <p class="h6 reply__text">
                         Required fields are marked *
                     </p>
-                    <div class="reply__form-row">
+                    <div class="reply__form">
                         <div class="form__fields reply__fields">
                             <span class="form__title">Name*</span>
                             <input class="form__input" type="text" placeholder="Walter Moss" required>
@@ -236,35 +236,35 @@
             <!-- reply end -->
 
             <!-- comments -->
-            <section class="comments">
-                <div class="container comments__container">
-                    <h3 class="h3 title comments__title">
+            <section class="comment">
+                <div class="container comment__container">
+                    <h3 class="h3 title comment__title">
                         Comments
                     </h3>
-                    <div class="comments__column">
-                        <div class="comments__column-general">
-                            <img class="comments__img" src="../../img/blog-01/blog-01-03.jpg" alt="">
-                            <div class="comments__column-content">
-                                <div class="comments__column-content-info">
-                                    <h4 class="h4 title comments__column-content-info-title">
+                    <div class="comment__column">
+                        <div class="comment__column-general">
+                            <img class="comment__img" src="../../img/blogsec/people2.jpg" alt="">
+                            <div class="comment__column-content">
+                                <div class="comment__column-content-info">
+                                    <h4 class="h4 title comment__column-content-info-title">
                                         Scarlet withch
                                     </h4>
-                                    <p class="h9 comments__column-content-info-data">
+                                    <p class="h9 comment__column-content-info-data">
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comments__column-content-text">
+                                <p class="h4 comment__column-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comments__column-content-link" href="#">
+                                <a class="comment__column-content-link" href="#">
                                     <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comments__column-content-link-text">
+                                    <span class="h6 comment__column-content-link-text">
                                         Reply
                                     </span>
                                 </a>
@@ -272,29 +272,29 @@
                             </div>
 
                         </div>
-                        <div class="comments__column-subordinate">
-                            <img class="comments__img" src="../../img/blog-01/blog-01-04.jpg" alt="">
-                            <div class="comments__column-content">
-                                <div class="comments__column-content-info">
-                                    <h4 class="h4 title comments__column-content-info-title">
+                        <div class="comment__column-subordinate">
+                            <img class="comment__img" src="../../img/blogsec/people3.jpg" alt="">
+                            <div class="comment__column-content">
+                                <div class="comment__column-content-info">
+                                    <h4 class="h4 title comment__column-content-info-title">
                                         Kate Moss
                                     </h4>
-                                    <p class="h9 comments__column-content-info-data">
+                                    <p class="h9 comment__column-content-info-data">
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comments__column-content-text">
+                                <p class="h4 comment__column-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comments__column-content-link" href="#">
+                                <a class="comment__column-content-link" href="#">
                                     <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comments__column-content-link-text">
+                                    <span class="h6 comment__column-content-link-text">
                                         Reply
                                     </span>
                                 </a>
@@ -302,29 +302,29 @@
                             </div>
 
                         </div>
-                        <div class="comments__column-general">
-                            <img class="comments__img" src="../../img/blog-01/blog-01-03.jpg" alt="">
-                            <div class="comments__column-content">
-                                <div class="comments__column-content-info">
-                                    <h4 class="h4 title comments__column-content-info-title">
+                        <div class="comment__column-general">
+                            <img class="comment__img" src="../../img/blogsec/people2.jpg" alt="">
+                            <div class="comment__column-content">
+                                <div class="comment__column-content-info">
+                                    <h4 class="h4 title comment__column-content-info-title">
                                         Scarlet withch
                                     </h4>
-                                    <p class="h9 comments__column-content-info-data">
+                                    <p class="h9 comment__column-content-info-data">
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comments__column-content-text">
+                                <p class="h4 comment__column-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comments__column-content-link" href="#">
+                                <a class="comment__column-content-link" href="#">
                                     <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comments__column-content-link-text">
+                                    <span class="h6 comment__column-content-link-text">
                                         Reply
                                     </span>
                                 </a>
