--- a/src/pages/workspage/work1.html
+++ b/src/pages/workspage/work1.html
@@ -96,7 +96,7 @@
             </div>
         </section>
         
-          
+        </main>
 
        <footer class="footer">
         <div class="container footer__container">
