--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
                                 Full-time UI/UX designer
                                 Head of Design at VeronaLabs.com
                             </h3>
-                            <p class="title">→</p>
+                           <a href="./pages/about.html"> <p class="title">→</p></a>
                         </div>
                         
                         <div class="info__descrip-text">
