--- a/src/index.html
+++ b/src/index.html
@@ -52,31 +52,27 @@
             <div class=" home__container">  
                  <h1 class="container title">Manifest is a newborn theme.
                     <p>Clean, simple and fast.</p></h1>
-                <div class="home__content">
-                    <div class="home__works">
-                    <div class="home__card">
-                        <img  src="../img/home/img 1.jpg">
-                    <p class="h6"></p>
-                    </div>
-                    <div class="home__card2">
-                        <img  src="../img/home/img 2.jpg">
-                        <p class="h6">Mixkit Inspo</p>
-                    </div>
-                    <div class="home__card2"> 
-                        <img  src="../img/home/img 3.jpg">
-                        <p class="h6">Abalone</p>
-                    </div>
-                    <div class="home__card">
-                        <img  src="../img/home/img 4.jpg">
-                        <p class="h6">Dreamy</p>
-                    </div>    
-                </div>
-                </div>
-            </div>
-                 </section>
-
+                
                  <!-- home end -->
                 
+                 <section class="slider">
+                    <div class=" slider__cart">
+                        <img class="slider__cart-img" src="./img/home/Img03.jpg" alt="">
+                        <p class="h6 slider__cart-text">Abalone</p>
+                    </div>
+                    <div class="slider__cart">
+                        <img class="slider__cart-img" src="./img/home/Img01.jpg" alt="">
+                        <p class="h6 slider__cart-text">Mixkit Inspo</p>
+                    </div>
+                    <div class="slider__cart">
+                        <img class="slider__cart-img" src="./img/home/Img02.jpg" alt="">
+                        <p class="h6 slider__cart-text">Abalone</p>
+                    </div>
+                    <div class="slider__cart">
+                        <img class="slider__cart-img" src="./img/home/Img04.jpg" alt="">
+                        <p class="h6 slider__cart-text">Mixkit Inspo</p>
+                    </div>
+                </section>
                 <!-- info start -->
                 <section class="info">
                  <div class="container info__container">
@@ -198,7 +194,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright Manifest Theme. Allrights reserved
+                © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
             </p>
 
         </div>
