--- a/src/pages/workspage/work3.html
+++ b/src/pages/workspage/work3.html
@@ -30,35 +30,35 @@
                             <a class="header__nav-link" href="/">Home</a>
                         </li>
                         <li class="header__nav-item">
-                            <a class="header__nav-link" href="./about.html">About</a>
+                            <a class="header__nav-link" href="../about.html">About</a>
                         </li>
                         <li class="header__nav-item header__nav-item--active">
                             <a class="header__nav-link" href="../works.html">Works</a>
                         </li>
                         <li class="header__nav-item">
-                            <a class="header__nav-link" href="./blog.html">Blog</a>
+                            <a class="header__nav-link" href="../blog.html">Blog</a>
                         </li>
                         <li class="header__nav-item">
-                            <a class="header__nav-link" href="./contact.html">Contact</a>
+                            <a class="header__nav-link" href="../contact.html">Contact</a>
                         </li>
                    </ul>
                 </nav>
             </div>
         </header>
 
-        <main class="fashion">
-            <section class="container fashion__container">
-                <div class="fashion__content">
+        <main class="workpag">
+            <section class="container workpag__container">
+                <div class="workpag__content">
                     <p class="h3 ">CASE STUDY</p>
-                    <h1 class="title fashion__title" >AI Fashion Platform</h1>
-                    <img class="fashion__img" src="../../img/workspages/arrodesc.jpg">
+                    <h1 class="title workpag__title" >AI Fashion Platform</h1>
+                    <img class="workpag__img" src="../../img/workspages/arrodesc.jpg">
                 </div>
                
 
             </section> 
             
-            <section class="container fashion__description">
-                <div class="fashion__overviev">
+            <section class="container workpag__description">
+                <div class="workpag__overviev">
                     <p class="h3">Project Overview</p>
                     <p class="text">FashHanger is a bespoke sustainable high-fashion accessory company based out of Berlin, 
                     currently operated by Siesly and her sister Ashely.</p>
@@ -66,7 +66,7 @@
                         Their goals were simple, create a unique e-commerce store that bring a wonderful 
                         shopping experience at every stage of the buyer’s journey.</p>
                 </div>
-                <div class="fashion__specification">
+                <div class="workpag__specification">
                     <h3 class="h3">Year</h3>
                     <p class="text">2019</p>
                     <h3 class="h3">Platform</h3>
@@ -77,11 +77,11 @@
                     <p class="text">www.fashhanger.com</p>
                 </div>
             </section>
-        <section class="container fashion__section">
-            <div class="fashion__content">
+        <section class="container workpag__section">
+            <div class="workpag__content">
                 <h3 class="h3">Final Design</h3>
-                <img class="fashion__img" src="../../img/workspages/fonardesc.jpg">
-                <div class="fashion__text">    
+                <img class="workpag__img" src="../../img/workspages/fonardesc.jpg">
+                <div class="workpag__text">    
                 <p class="text">
                     I played with adding a wireframe of the website flow that would lead you in to each screen. 
                     For each of those screens I added a floating footer that allows users to see where they are in that particular flow and jump around as needed.”
@@ -134,7 +134,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright Manifest Theme. Allrights reserved
+                © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
             </p>
 
         </div>
