--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -381,7 +381,7 @@
                 </ul>
 
                 <p class="h9 footer__description">
-                    © Copyright Viktoria2123 Theme. 2022
+                    © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
                 </p>
 
             </div>
