--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -192,7 +192,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright Manifest Theme. Allrights reserved
+                © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
             </p>
 
         </div>
