--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -18,13 +18,13 @@
             <div class="container header__container">
                 <img class="logo" src="../img/Logo.svg" alt="logo">
                 <nav class="header__nav">
-                   <label class="header__nav-label" for="gam">
+                   <label class="header__nav-label" for="ham">
                     <div class="header__nav-icon"> 
-                        <img class="header__gam-img" src="../img/icon.png" alt="=">
+                        <img class="header__ham-img" src="../img/icon.png" alt="=">
                     </div>
                     <div class="header__nav-icon"></div>
                    </label>
-                   <input id="gam" class="header__nav-input" type="checkbox">
+                   <input id="ham" class="header__nav-input" type="checkbox">
                    <ul class="header__nav-row">
                         <li class="header__nav-item">
                             <a class="header__nav-link" href="/">Home</a>
