--- a/src/pages/workspage/work1.html
+++ b/src/pages/workspage/work1.html
@@ -46,19 +46,22 @@
             </div>
         </header>
 
-        <main class="workpag">
-            <section class="container workpag__container">
-                <div class="workpag__content">
+        <main class="workpage">
+            <section class="container workpage__container">
+                <div class="workpage__content">
                     <p class="h3 ">CASE STUDY</p>
-                    <h1 class="title workpag__title" >AI Fashion Platform</h1>
-                    <img class="workpag__img" src="../../img/workspages/arrodesc.jpg">
+                    <h1 class="title workpage__title" >AI Fashion Platform</h1>
+                    <picture class="workpage__img">
+                        <source media="(max-width: 991px)" srcset="../../img/workspages/projecmob.jpg">
+                        <img src="../../img/workspages/arrodesc.jpg" alt="img" style="width:100%">
+                    </picture>
                 </div>
                
 
             </section> 
             
-            <section class="container workpag__description">
-                <div class="workpag__overviev">
+            <section class="container workpage__description">
+                <div class="workpage__overviev">
                     <p class="h3">Project Overview</p>
                     <p class="text">FashHanger is a bespoke sustainable high-fashion accessory company based out of Berlin, 
                     currently operated by Siesly and her sister Ashely.</p>
@@ -66,7 +69,7 @@
                         Their goals were simple, create a unique e-commerce store that bring a wonderful 
                         shopping experience at every stage of the buyer’s journey.</p>
                 </div>
-                <div class="workpag__specification">
+                <div class="workpage__specification">
                     <h3 class="h3">Year</h3>
                     <p class="text">2019</p>
                     <h3 class="h3">Platform</h3>
@@ -78,11 +81,14 @@
                 </div>
             </section>
 
-        <section class="container workpag__section">
-            <div class="workpag__content">
-                <h3 class="h3">User Research and Personas</h3>
-                <img class="workpag__img" src="../../img/workspages/kryshadesc.jpg">
-                <div class="workpag__text">
+        <section class="container workpage__section">
+            <div class="workpage__content">
+                <h3 class="h3 workpage__title">User Research and Personas</h3>
+                <picture class="workpage__img">
+                    <source media="(max-width: 991px)" srcset="../../img/workspages/usermob.jpg">
+                    <img src="../../img/workspages/kryshadesc.jpg" alt="img" style="width:100%">
+                </picture>
+                <div class="workpage__text">
                 <p class="text">
                     Who is your user? Indicate her KEY personality traits and help round out her overall image.
                 </p>    
