--- a/src/pages/workspage/work3.html
+++ b/src/pages/workspage/work3.html
@@ -46,19 +46,22 @@
             </div>
         </header>
 
-        <main class="workpag">
-            <section class="container workpag__container">
-                <div class="workpag__content">
+        <main class="workpage">
+            <section class="container workpage__container">
+                <div class="workpage__content">
                     <p class="h3 ">CASE STUDY</p>
-                    <h1 class="title workpag__title" >AI Fashion Platform</h1>
-                    <img class="workpag__img" src="../../img/workspages/arrodesc.jpg">
+                    <h1 class="title workpage__title" >AI Fashion Platform</h1>
+                    <picture class="workpage__img">
+                        <source media="(max-width: 991px)" srcset="../../img/workspages/projecmob.jpg">
+                        <img src="../../img/workspages/arrodesc.jpg" alt="img" style="width:100%">
+                    </picture>
                 </div>
                
 
             </section> 
             
-            <section class="container workpag__description">
-                <div class="workpag__overviev">
+            <section class="container workpage__description">
+                <div class="workpage__overviev">
                     <p class="h3">Project Overview</p>
                     <p class="text">FashHanger is a bespoke sustainable high-fashion accessory company based out of Berlin, 
                     currently operated by Siesly and her sister Ashely.</p>
@@ -66,7 +69,7 @@
                         Their goals were simple, create a unique e-commerce store that bring a wonderful 
                         shopping experience at every stage of the buyer’s journey.</p>
                 </div>
-                <div class="workpag__specification">
+                <div class="workpage__specification">
                     <h3 class="h3">Year</h3>
                     <p class="text">2019</p>
                     <h3 class="h3">Platform</h3>
@@ -77,11 +80,14 @@
                     <p class="text">www.fashhanger.com</p>
                 </div>
             </section>
-        <section class="container workpag__section">
-            <div class="workpag__content">
-                <h3 class="h3">Final Design</h3>
-                <img class="workpag__img" src="../../img/workspages/fonardesc.jpg">
-                <div class="workpag__text">    
+        <section class="container workpage__section">
+            <div class="workpage__content">
+                <h3 class="h3 workpage__title">Final Design</h3>
+                <picture class="workpage__img">
+                    <source media="(max-width: 991px)" srcset="../../img/workspages/finalmob.jpg">
+                    <img src="../../img/workspages/fonardesc.jpg" alt="img" style="width:100%">
+                </picture>
+                <div class="workpage__text">    
                 <p class="text">
                     I played with adding a wireframe of the website flow that would lead you in to each screen. 
                     For each of those screens I added a floating footer that allows users to see where they are in that particular flow and jump around as needed.”
