--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -10,6 +10,8 @@
 <body>
     <div class="wrapper">
 
+        <!-- error start -->
+
         <section class="error">
             <div class="container error__container">
                 <div class="error__content">
@@ -58,6 +60,9 @@
 
             </div>
         </section>
+        
+        <!-- error end -->
+
 
     </div>
 </div>
