--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -152,7 +152,7 @@
         </div>
           </section>
     
-       
+       <!-- post end -->
 
        <footer class="footer">
         <div class="container footer__container">
