--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -46,7 +46,8 @@
             </div>
         </header>
 
-      
+        <!-- contacts start -->
+
           <section class="contacts">
             <div class="container contacts__container">
                <div class="contacts__content">
@@ -155,6 +156,7 @@
             </div>
           </section>
           
+          <!-- contacts end -->
 
        <footer class="footer">
         <div class="container footer__container">
