--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -47,6 +47,8 @@
             </div>
         </header>
 
+        <!-- about start -->
+
             <section class="about">
                 <div class="container about__container">
                     <div class="about__content">
@@ -78,6 +80,7 @@
                 </div>
             </section>
        
+            <!-- about end -->
 
         <footer class="footer">
             <div class="container footer__container">
