--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -45,7 +45,8 @@
             </div>
         </header>
 
-       
+            <!-- blog start -->
+
             <section class="blog">
                 <div class="container blog__container">
                     <h6 class="h6 blog__container-tag">
@@ -56,18 +57,18 @@
                         Using UX Design to Build a Sustainable Future
                     </h1>
 
-                    <div class="blog__container-text">
+                    <div class="blog__info-text">
                         <p class="h6 blog__container-text-date">
                             6 May, 2020
                         </p>
-                        <div class="h6 blog__container-text-comments">
+                        <div class="h6 blog__info-text-comments">
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M3.2 0.777344H12.8C14.5673 0.777344 16 2.09316 16 3.7163V9.5942C16 11.2173 14.5673 12.5332 12.8 12.5332H4.8C4.15884 12.5219 3.53946 12.7468 3.08 13.1577L0.68 15.3619C0.606662 15.4318 0.505695 15.4715 0.4 15.4721C0.179086 15.4721 0 15.3076 0 15.1047V3.7163C0 2.09316 1.43269 0.777344 3.2 0.777344ZM14.4 3.7163C14.4 2.90473 13.6837 2.24683 12.8 2.24683H3.2C2.31635 2.24683 1.60001 2.90473 1.60001 3.7163V12.445L1.96801 12.1364C2.71961 11.4479 3.73841 11.062 4.8 11.0637H12.8C13.6837 11.0637 14.4 10.4058 14.4 9.59422V3.7163Z"
                                     fill="#7B7B7B" />
                             </svg>
-                            <p class="h6 blog__container-text-comment">
+                            <p class="h6 blog__info-text-comment">
                                 0 comments
                             </p>
                         </div>
@@ -76,35 +77,35 @@
                     <img class="blog__container-img" src="../../img/blogsec/dom.jpg" alt="">
                 </div>
             </section>
-            <!-- blog1 end-->
+            <!-- blog end-->
 
             <!-- description -->
             <section class="description">
                 <div class="container description__container">
-                    <div class="description__autor">
-                        <img class="description__autor-img" src="../../img/blogsec/people.jpg" alt="">
-                        <p class="h6 description__autor-title">
+                    <div class="description__writer">
+                        <img class="description__writer-img" src="../../img/blogsec/people.jpg" alt="">
+                        <p class="h6 description__writer-name">
                             Monica Geller
                         </p>
                     </div>
 
                     <div class="description__column">
-                        <div class="description__social-items">
-                            <a class="hover-link-animation description__social-items-link"
+                        <div class="description__social-networks">
+                            <a class=" description__social-networks-icon"
                                 href="https://www.facebook.com/"target="_blank"><svg width="15" height="18" viewBox="0 0 9 17"
                                     fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M8.44444 3.42266H5.77778C5.28686 3.42266 4.88889 3.8256 4.88889 4.32266V7.02266H8.44444C8.54554 7.02039 8.64142 7.06801 8.70153 7.15035C8.76164 7.23268 8.77847 7.33946 8.74666 7.43666L8.08889 9.41666C8.02827 9.59838 7.86055 9.72123 7.67111 9.72266H4.88889V16.4727C4.88889 16.7212 4.6899 16.9227 4.44444 16.9227H2.22222C1.97676 16.9227 1.77778 16.7212 1.77778 16.4727V9.72266H0.444444C0.198984 9.72266 0 9.52118 0 9.27266V7.47266C0 7.22413 0.198984 7.02266 0.444444 7.02266H1.77778V4.32266C1.77778 2.33443 3.36965 0.722656 5.33333 0.722656H8.44444C8.6899 0.722656 8.88889 0.924128 8.88889 1.17266V2.97266C8.88889 3.22118 8.6899 3.42266 8.44444 3.42266Z"
                                         fill="#7B7B7B" />
                                 </svg></a>
-                            <a class="hover-link-animation description__social-items-link"
+                            <a class=" description__social-networks-icon"
                                 href="https://twitter.com/"target="_blank"><svg width="20" height="18" viewBox="0 0 19 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M18.796 3.06659C18.3103 3.72255 17.7232 4.29474 17.0574 4.76108C17.0574 4.93243 17.0574 5.10379 17.0574 5.28466C17.0628 8.39641 15.8352 11.3802 13.6498 13.5671C11.4644 15.7539 8.50416 16.961 5.43258 16.9176C3.65683 16.9236 1.90382 16.5131 0.310872 15.7182C0.22498 15.6802 0.169581 15.5941 0.169908 15.4992V15.3945C0.169908 15.2578 0.279301 15.147 0.414246 15.147C2.15976 15.0887 3.84301 14.476 5.22583 13.3954C3.6459 13.3632 2.22436 12.4155 1.57015 10.9583C1.53711 10.8788 1.5474 10.7875 1.5973 10.7175C1.64721 10.6475 1.72952 10.6089 1.81449 10.6156C2.29467 10.6645 2.77964 10.6193 3.24293 10.4824C1.49881 10.1158 0.188305 8.64975 0.000750258 6.85539C-0.00591569 6.76932 0.0321829 6.68594 0.101282 6.63539C0.170382 6.58483 0.260494 6.57441 0.339065 6.60788C0.80711 6.81699 1.31236 6.92713 1.82389 6.93155C0.29563 5.91594 -0.364478 3.98421 0.216896 2.22886C0.276907 2.0583 0.421084 1.93229 0.596445 1.89715C0.771806 1.86202 0.952482 1.92293 1.07208 2.05751C3.13437 4.27984 5.96799 5.60412 8.97548 5.75112C8.89845 5.43988 8.86056 5.12003 8.86271 4.79916C8.89084 3.11669 9.919 1.61791 11.4658 1.0045C13.0127 0.391085 14.7721 0.784434 15.9203 2.00039C16.703 1.84942 17.4597 1.58322 18.1664 1.21027C18.2181 1.17755 18.2838 1.17755 18.3355 1.21027C18.3678 1.2627 18.3678 1.32919 18.3355 1.38162C17.9933 2.17518 17.4151 2.84076 16.6815 3.28554C17.3239 3.21012 17.9549 3.05671 18.5611 2.8286C18.6121 2.79343 18.6792 2.79343 18.7302 2.8286C18.773 2.84841 18.8049 2.88628 18.8176 2.93214C18.8303 2.97799 18.8224 3.02718 18.796 3.06659Z"
                                         fill="#7B7B7B" />
                                 </svg></a>
-                            <a class="hover-link-animation description__social-items-link"
+                            <a class="description__social-networks-icon"
                                 href="https://www.linkedin.com/"target="_blank"><svg width="18" height="17" viewBox="0 0 18 17"
                                     fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -112,7 +113,7 @@
                                         fill="#7B7B7B" />
                                 </svg>
                             </a>
-                            <a class="hover-link-animation description__social-items-link"
+                            <a class=" description__social-networks-icon"
                                 href="https://dribbble.com/"target="_blank"><svg width="20" height="19" viewBox="0 0 18 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -148,19 +149,19 @@
                                     environmental impact of tech.
                                 </p>
                             </div>
-                            <div class="description__content-vector">
-                                <p class="h4 description__content-vector-text">
+                            <div class="description__context">
+                                <p class="h4 description__context-text">
                                     “UX designers are in a unique position to create tools with sustainability at their
                                     heart by streamlining user workflows, minimizing information overload, and removing
                                     potential distractions that keep users from accomplishing tasks they set out to do.”
                                 </p>
-                                <p class="h4 description__content-vector-text">
+                                <p class="h4 description__contenxt-text">
                                     ‘Designing For Sustainability, Tim Frick, 2014'
                                 </p>
                             </div>
 
-                            <div class="description__content-2">
-                                <p class="h4 description__content-2-text">
+                            <div class="description__content2">
+                                <p class="h4 description__content2-text">
                                     Most of the Internet is unsustainable, so there is an opportunity to make a very
                                     real
                                     and lasting impact through our work. The following are some ideas for ways in which
@@ -168,14 +169,14 @@
                                     designers can play their part in managing this global crisis.
                                 </p>
 
-                                <ul class="description__content-2-list">
-                                    <li class="description__content-2-list-item">
+                                <ul class="description__questionanswer">
+                                    <li class="description__questionanswer-item">
                                         Ask if the product is solving a real-world problem?
                                     </li>
-                                    <li class="description__content-2-list-item">
+                                    <li class="description__questionanswer-item">
                                         Use content strategy to offer choices to customers choices.
                                     </li>
-                                    <li class="description__content-2-list-item">
+                                    <li class="description__questionanswer-item">
                                         When considering fonts, stick to two font types and reduce the typeface.
                                     </li>
                                 </ul>
@@ -196,7 +197,7 @@
             </section>
             <!-- description end -->
 
-            <!-- reply -->
+            <!-- reply start -->
             <section class="reply">
                 <div class="container reply__container">
                     <h3 class="h3 title reply__title">
@@ -228,14 +229,14 @@
                         <span class="form__title">Comment*</span>
                         <input class="form__input" type="text" placeholder="Hi there ..." required>
                     </div>
-                    <button class="button reply__btn">
+                    <button class="button reply__button">
                         Post
                     </button>
                 </div>
             </section>
             <!-- reply end -->
 
-            <!-- comments -->
+            <!-- comment start -->
             <section class="comment">
                 <div class="container comment__container">
                     <h3 class="h3 title comment__title">
@@ -243,13 +244,13 @@
                     </h3>
                     <div class="comment__column">
                         <div class="comment__column-general">
-                            <img class="comment__img" src="../../img/blogsec/people2.jpg" alt="">
+                            <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
                             <div class="comment__column-content">
                                 <div class="comment__column-content-info">
-                                    <h4 class="h4 title comment__column-content-info-title">
+                                    <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
-                                    <p class="h9 comment__column-content-info-data">
+                                    <p class="h9 comment__data">
                                         6 May, 2020
                                     </p>
                                 </div>
@@ -259,12 +260,12 @@
                                 </p>
 
                                 <a class="comment__column-content-link" href="#">
-                                    <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
+                                    <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comment__column-content-link-text">
+                                    <span class="h6 comment__reply">
                                         Reply
                                     </span>
                                 </a>
@@ -273,13 +274,13 @@
 
                         </div>
                         <div class="comment__column-subordinate">
-                            <img class="comment__img" src="../../img/blogsec/people3.jpg" alt="">
+                            <img class="comment__writer-img" src="../../img/blogsec/people3.jpg" alt="">
                             <div class="comment__column-content">
                                 <div class="comment__column-content-info">
-                                    <h4 class="h4 title comment__column-content-info-title">
+                                    <h4 class="h4 title writer__name">
                                         Kate Moss
                                     </h4>
-                                    <p class="h9 comment__column-content-info-data">
+                                    <p class="h9 comment__data">
                                         6 May, 2020
                                     </p>
                                 </div>
@@ -289,12 +290,12 @@
                                 </p>
 
                                 <a class="comment__column-content-link" href="#">
-                                    <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
+                                    <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comment__column-content-link-text">
+                                    <span class="h6 comment__reply">
                                         Reply
                                     </span>
                                 </a>
@@ -303,13 +304,13 @@
 
                         </div>
                         <div class="comment__column-general">
-                            <img class="comment__img" src="../../img/blogsec/people2.jpg" alt="">
+                            <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
                             <div class="comment__column-content">
                                 <div class="comment__column-content-info">
-                                    <h4 class="h4 title comment__column-content-info-title">
+                                    <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
-                                    <p class="h9 comment__column-content-info-data">
+                                    <p class="h9 comment__data">
                                         6 May, 2020
                                     </p>
                                 </div>
@@ -319,12 +320,12 @@
                                 </p>
 
                                 <a class="comment__column-content-link" href="#">
-                                    <svg width="16" height="14" viewBox="0 0 16 14" fill="none"
+                                    <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
                                             fill="#7B7B7B" />
                                     </svg>
-                                    <span class="h6 comment__column-content-link-text">
+                                    <span class="h6 comment__reply">
                                         Reply
                                     </span>
                                 </a>
@@ -337,7 +338,7 @@
 
             </section>
 
-
+            <!-- comment end -->
 
         </main>
 
