--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -242,11 +242,11 @@
                     <h3 class="h3 title comment__title">
                         Comments
                     </h3>
-                    <div class="comment__column">
-                        <div class="comment__column-general">
+                    <div class="comment__field">
+                        <div class="comment__field-main">
                             <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
-                            <div class="comment__column-content">
-                                <div class="comment__column-content-info">
+                            <div class="comment__field-content">
+                                <div class="comment__field-content-info">
                                     <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
@@ -254,12 +254,12 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__column-content-text">
+                                <p class="h4 comment__field-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comment__column-content-link" href="#">
+                                <a class="comment__field-content-link" href="#">
                                     <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
@@ -273,10 +273,10 @@
                             </div>
 
                         </div>
-                        <div class="comment__column-subordinate">
+                        <div class="comment__field-reply">
                             <img class="comment__writer-img" src="../../img/blogsec/people3.jpg" alt="">
-                            <div class="comment__column-content">
-                                <div class="comment__column-content-info">
+                            <div class="comment__field-content">
+                                <div class="comment__field-content-info">
                                     <h4 class="h4 title writer__name">
                                         Kate Moss
                                     </h4>
@@ -284,12 +284,12 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__column-content-text">
+                                <p class="h4 comment__field-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comment__column-content-link" href="#">
+                                <a class="comment__field-content-link" href="#">
                                     <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
@@ -303,10 +303,10 @@
                             </div>
 
                         </div>
-                        <div class="comment__column-general">
+                        <div class="comment__field-main">
                             <img class="comment__writer-img" src="../../img/blogsec/people2.jpg" alt="">
-                            <div class="comment__column-content">
-                                <div class="comment__column-content-info">
+                            <div class="comment__field-content">
+                                <div class="comment__field-content-info">
                                     <h4 class="h4 title writer__name">
                                         Scarlet withch
                                     </h4>
@@ -314,12 +314,12 @@
                                         6 May, 2020
                                     </p>
                                 </div>
-                                <p class="h4 comment__column-content-text">
+                                <p class="h4 comment__field-content-text">
                                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
                                     euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
                                 </p>
 
-                                <a class="comment__column-content-link" href="#">
+                                <a class="comment__field-content-link" href="#">
                                     <svg width="20" height="20" viewBox="0 0 16 14" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8 4C13.2 4 16 7.8 16 14C14.5 11.6 13.3 10 8 10V14L0 7L8 0V4Z"
