--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -11,6 +11,7 @@
     <div class="wrapper">
 
         <!-- error start -->
+    <main class="error__page">
 
         <section class="error">
             <div class="container error__container">
@@ -60,7 +61,7 @@
 
             </div>
         </section>
-        
+        </main>
         <!-- error end -->
 
 
