--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -47,6 +47,7 @@
         </header>
 
         <!-- blog start -->
+        <main class="blog--page">
           <section class="blog">
             
             <div class="container blog__container">
@@ -151,7 +152,7 @@
             </div>
         </div>
           </section>
-    
+    </main>
        <!-- post end -->
 
        <footer class="footer">
