--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -46,7 +46,7 @@
         </header>
 
             <!-- blog start -->
-
+        <main class="blogsec--page">
             <section class="blog">
                 <div class="container blog__container">
                     <h6 class="h6 blog__container-tag">
@@ -382,7 +382,7 @@
                 </ul>
 
                 <p class="h9 footer__description">
-                    © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
+                    © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
                 </p>
 
             </div>
