--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -48,7 +48,7 @@
         </header>
 
         <!-- about start -->
-
+            <main class="about--page">
             <section class="about">
                 <div class="container about__container">
                     <div class="about__content">
@@ -79,7 +79,7 @@
                  
                 </div>
             </section>
-       
+        </main>
             <!-- about end -->
 
         <footer class="footer">
