--- a/src/pages/works.html
+++ b/src/pages/works.html
@@ -46,7 +46,9 @@
             </div>
         </header>
 
+        <main class="works--page">
         <!-- title start -->
+
           <section class="top">
             <div class="container top__container">
                 <div class="top__row">
@@ -108,6 +110,7 @@
             </div> 
               </section>
 
+        </main>
             <!-- works end -->
             
          
@@ -150,7 +153,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
+                © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
             </p>
 
         </div>
