--- a/src/pages/workspage/work3.html
+++ b/src/pages/workspage/work3.html
@@ -153,7 +153,7 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright <a color="#7B7B7B" href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
+                © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
             </p>
 
         </div>
