--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -133,16 +133,16 @@
                         <div class="form__fields">
                             <span class="form__tilte">Country</span>
                         <select class="form__input"  name="country" id="">
-                            <option value="1">Poland</option>
-                            <option value="2">Ukraine</option>
-                            <option value="3">USA</option>
-                            <option value="4">Italy</option>
+                            <option value="Ukraine">Poland</option>
+                            <option value="Poland">Ukraine</option>
+                            <option value="USA">USA</option>
+                            <option value="Italy">Italy</option>
                         </select>
                         </div>
 
                         <div class="form__fields">
                             <span class="form__tilte">Message*</span>
-                            <input class="form__input" type="text" name="" placeholder="Hi there ..." required>
+                            <input class="form__input" type="text" name="Message" placeholder="Hi there ..." required>
                         </div>
 
                         <button type="submit" class="button">
