--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -133,8 +133,8 @@
                         <div class="form__fields">
                             <span class="form__tilte">Country</span>
                         <select class="form__input"  name="country" id="">
-                            <option value="Ukraine">Poland</option>
-                            <option value="Poland">Ukraine</option>
+                            <option value="Ukraine">Ukraine</option>
+                            <option value="Poland">Poland</option>
                             <option value="USA">USA</option>
                             <option value="Italy">Italy</option>
                         </select>
