--- a/src/pages/workspage/work3.html
+++ b/src/pages/workspage/work3.html
@@ -153,7 +153,8 @@
             </ul>
 
             <p class="h9 footer__description">
-                © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
+                <!-- © Copyright <a  href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> 2022 -->
+                © Copyright Manifest Theme. Allrights reserved
             </p>
 
         </div>
