--- a/src/pages/blogsec/blogsec.html
+++ b/src/pages/blogsec/blogsec.html
@@ -382,8 +382,8 @@
                 </ul>
 
                 <p class="h9 footer__description">
-                    © Copyright <a href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> Theme. 2022
-                </p>
+                    <!-- © Copyright <a  href="https://github.com/NikBezkorovaynyi" target="_blank" > by NikBezkorovaynyi</a> 2022 -->
+                © Copyright Manifest Theme. Allrights reserved
 
             </div>
         </footer>
